--- a/index-areas.html
+++ b/index-areas.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <div class="header area">Header</div>
-        <div class="sidenav area">SideNav</div>
-        <div class="content area">Content
-            <br /> Welcome to WEB504 Class with HTML CSS and JavaScript
-        </div>
+        <div class="side-nav-one area">SideNav One</div>
+        <div class="side-nav-two area">SideNav Two</div>
+        <div class="content area">Content <br /> Have some additional text</div>
         <div class="footer area">Footer</div>
     </div>
+
 </body>
 </html>
